# material_benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  main.cu  material_from_input_file.cpp
assembly/: J2_plasticity_scalar_x86.s  J2_plasticity_simd_256.s  J2_plasticity_simd_x86.s  x86_simd_report.sh
inc/: enoki.hpp  hostdevice.hpp  materials.hpp  matrix.hpp  timer.hpp
src/: J2_plasticity.cpp  J2_plasticity.cu  neohookean.cpp
